<resources>
    <string name="app_name">Aplikasi Daftar Batik</string>
    <string name="deskripsi_batik">Deskripsi Batik :</string>
    <string name="harga_tertinggi">Harga Tertinggi</string>
    <string name="harga_terendah">Harga Terendah</string>
    <string name="kisaran_harga">Kisaran Harga</string>
    <string name="asal_daerah">Asal Daerah :</string>
    <string name="daftar_batik">Daftar Batik</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="refresh">Refresh</string>
    <string name="tempat">Tempat</string>
    <string name="here_is_some_text">Here is some text</string>
</resources>