<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detail_gambar_batik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/detail_gambar_batik"
            android:padding="16dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/detail_nama_batik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                tools:text="Nama Batik" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_daerah_batik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asal_daerah"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/detail_daerah_batik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/label_daerah_batik"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    tools:text="Daerah batik"
                    android:layout_toEndOf="@id/label_daerah_batik" />
            </RelativeLayout>


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kisaran_harga"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/label_detail_harga_rendah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:text="@string/harga_terendah"
                    android:layout_marginLeft="5dp" />


                <TextView
                    android:id="@+id/label_detail_harga_tinggi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:text="@string/harga_tertinggi"
                    android:layout_marginRight="5dp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:background="@drawable/gradient_harga">

                <TextView
                    android:id="@+id/detail_harga_rendah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:text="10000"
                    android:layout_marginLeft="8dp" />

                <TextView
                    android:id="@+id/detail_harga_tinggi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:text="100000"
                    android:layout_marginRight="8dp" />

            </FrameLayout>


            <TextView
                android:id="@+id/label_detail_makna_batik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/deskripsi_batik"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />


            <TextView
                android:id="@+id/detail_makna_batik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="aaaaaaaaaaaaaaaa" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>