<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/kolomcari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/custom_search"
            app:iconifiedByDefault="false"
            app:queryHint="Mau Cari Game Apa?....." />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="6dp">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/imageSlider"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="right"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="right|bottom"
                        app:sliderIndicatorMargin="15dp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="@color/colorPrimary"
                        app:sliderIndicatorUnselectedColor="#CCCAC8"
                        app:sliderScrollTimeInSec="4"
                        app:sliderStartAutoCycle="true" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/label_daftar_batik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/daftar_batik"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textStyle="bold"
                    android:layout_marginLeft="16dp" />

                <TextView
                    android:id="@+id/label_no_internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/no_internet_connection"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/refresh_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:text="@string/refresh"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/idRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/label_waktu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_toast_waktu"
        android:padding="12dp"
        android:textColor="@color/colorWhite"
        android:translationY="150dp"
        tools:text="Waktu info" />

</FrameLayout>










